syntax = "proto3";

package basaltpb;

option go_package = "github.com/cockroachdb/basaltclient/basaltpb";

// ObjectID uniquely identifies an object in the Basalt storage system.
message ObjectID {
  // UUID of the object as 16 bytes.
  bytes uuid = 1;
}

// ReplicaInfo describes a replica of an object stored on a blob server.
message ReplicaInfo {
  // Address of the blob server holding this replica (host:port).
  string address = 1;
  // Availability zone of the blob server.
  string az = 2;
}

// ObjectMeta contains metadata about an object.
message ObjectMeta {
  // Unique identifier for this object.
  ObjectID id = 1;
  // List of replicas storing this object.
  repeated ReplicaInfo replicas = 2;
  // Current size of the object in bytes.
  int64 size = 3;
  // Whether the object has been sealed (immutable).
  bool sealed = 4;
}

// MountID uniquely identifies an active mount of a Pebble instance.
message MountID {
  // UUID of the mount as 16 bytes.
  bytes uuid = 1;
}

// DirectoryID identifies a directory in the namespace.
// The nil UUID represents the namespace root.
message DirectoryID {
  // UUID of the directory as 16 bytes. Nil UUID = namespace root.
  bytes uuid = 1;
}

// EntryType distinguishes files from directories in the namespace.
enum EntryType {
  ENTRY_TYPE_UNSPECIFIED = 0;
  ENTRY_TYPE_FILE = 1;
  ENTRY_TYPE_DIRECTORY = 2;
}

// DirectoryEntry represents an entry in a directory listing.
message DirectoryEntry {
  // Name of the entry within its parent directory.
  string name = 1;
  // Type of entry (file or directory).
  EntryType type = 2;
  // ID of the target: object_id for files, directory_id for directories.
  bytes id = 3;
  // Size in bytes (only set for sealed files).
  int64 size = 4;
  // Whether the file is sealed (only applicable to files).
  bool sealed = 5;
}

// TODO: Add additional shared types as needed:
// - RangeID for per-range materialization
// - Epoch for fencing
// - Error codes and status types
